--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@splinetool/loader": "^1.5.9",
-    "@splinetool/runtime": "^1.5.9",
+    "@splinetool/react-spline": "^3.1.0",
+    "@splinetool/runtime": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
