--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.107.0",
+    "@react-three/fiber": "^8.16.8",
     "@splinetool/loader": "^1.5.9",
     "@splinetool/react-spline": "^3.1.0",
     "@splinetool/runtime": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "three": "^0.165.0"
   },
   "devDependencies": {
