--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.4",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@splinetool/loader": "^1.5.9",
     "@splinetool/react-spline": "^3.1.0",
     "@splinetool/runtime": "^1.6.8",
+    "framer-motion": "^11.2.12",
     "next": "14.2.3",
     "react": "^18",
+    "react-curved-text": "^3.0.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-icons": "^5.2.1",
+    "swr": "^2.2.5",
     "three": "^0.165.0"
   },
   "devDependencies": {
