--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splinetool/loader": "^1.5.9",
     "@splinetool/react-spline": "^3.1.0",
     "@splinetool/runtime": "^1.8.0",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.12",
     "next": "14.2.3",
     "react": "^18.2.0",
