--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
-    "@splinetool/loader": "^1.5.9",
+    "@splinetool/loader": "^1.9.0",
+    "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^3.1.0",
     "@splinetool/runtime": "^1.8.0",
     "@vercel/analytics": "^1.3.1",
