--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@splinetool/runtime": "^1.8.0",
     "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.12",
-    "next": "14.2.3",
+    "next": "^14.2.15",
     "react": "^18.2.0",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18",
